--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=MecPlus_projeto_integrador
+application.vendor=bsbru
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,19 @@ dist.jar=${dist.dir}/MecPlus_projeto_integrador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MecPlus_projeto_integrador
+endorsed.classpath=
 excludes=
+file.reference.commons-io-2.4.jar=src\\lib\\commons-io-2.4.jar
+file.reference.itextpdf-5.5.13.4.jar=..\\merc_bruno\\lib\\itextpdf-5.5.13.4.jar
 file.reference.mysql-connector-j-8.0.31.jar=..\\merc_bruno\\mysql-connector-j-8.0.31.jar
+file.reference.src-lib=src\\lib
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.src-lib}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.itextpdf-5.5.13.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MecPlus_projeto_integrador
-main.class=mecPlus.View.Principal
+main.class=mecPlus.View.Auth
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
